--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Hello Wilder !</title>
+    <title>Info Defaut</title>
     <link rel="stylesheet" href="/assets/css/style.css" />
-    <link rel="icon" href="/assets/images/favicon.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="/assets/images/logo-infoDefautSncf.png"
+    />
   </head>
   <body>
-    <h1>Hello Wilder !</h1>
+    <h1>Info Defaut</h1>
   </body>
 </html>
